@@ -1476,7 +1476,7 @@
       \item \textbf{MIDI Thru Toggle}
       \item \textbf{MIDI Record Toggle}
       \item \textbf{MIDI Record Quantized}
-      \item \textbf{Loop Record Type} (Merge, Replace, Expand, One-shot)
+      \item \textbf{Loop Record Type} (Overdub, Replace, Expand, One-shot)
       \item \textbf{Record Velocity and Reset}
    \end{enumber}
 
@@ -1657,7 +1657,7 @@
    Stazed's \textsl{Seq32} project.  The three methods are:
 
    \begin{enumber}
-      \item \textbf{Merge}.
+      \item \textbf{Overdub}.
          \index{merge}
          \index{overdub}
          \index{recording!merge}
@@ -1665,6 +1665,7 @@
          This is the normal style of recording loops, where notes can
          accumulate as the loop repeats.
 %        See \sectionref{paragraph:patterns_recording_modes}
+         Note that this item used to be called "Merge".
       \item \textbf{Overwrite.}
          \index{overwrite}
          \index{recording!overwrite}
